--- a/css/style.css
+++ b/css/style.css
@@ -34,18 +34,21 @@ html {
 			height: calc(100vh - 69px - 50px);
 
 			section {
+				/* Visualisation 1: Opening Explorer */
 				&#opening_explorer {
 					grid-column: 1 / 7;
 					grid-row: 1 / 3;
 					background-color: red;
 				}
 
+				/* Visualisation 2: Popularity plot */
 				&#popularity {
 					grid-column: 7 / 13;
 					grid-row: 1 / 2;
 					background-color: green;
 				}
 
+				/* Visualisation 3: Accuracy plot */
 				&#accuracy {
 					grid-column: 7 / 13;
 					grid-row: 2 / 3;
