--- a/css/style.css
+++ b/css/style.css
@@ -66,5 +66,19 @@ html {
 				margin: 0;
 			}
 		}
+
+		#tooltip {
+			position: absolute;
+			background: rgba(255, 255, 255, 0.95);
+			border: 1px solid #333;
+			padding: 8px;
+			border-radius: 4px;
+			pointer-events: none; /* Important pour ne pas bloquer le survol des croix */
+			opacity: 0;
+			transition: opacity;
+			line-height: 1.4;
+			top: 0;
+			left: 0;
+		}
 	}
 }
