--- a/css/chessboard.css
+++ b/css/chessboard.css
@@ -1,5 +1,5 @@
 .cbw-board {
-	width: min(400px, 100%);
+	height: 100%;
 	aspect-ratio: 1 / 1;
 	display: grid;
 	grid-template-columns: repeat(8, 1fr);
@@ -15,26 +15,26 @@
 .cbw-square {
 	display: flex;
 	align-items: center;
-	justify-content: center;
 	cursor: pointer;
-	font-size: clamp(18px, 4.2vw, 34px);
-	width: 50px;
-	height: 50px;
+	font-size: clamp(18px, 2.5vw, 34px);
+	aspect-ratio: 1 / 1;
 	transition: 0.18s ease;
 
 	&:hover {
 		filter: brightness(1.1);
 	}
 
-	img{
-		width: 95%;
+	img {
+		width: 90%;
+		height: auto;
 		filter: drop-shadow(0 10px 14px rgba(0,0,0,0.35));
 	}
 }
 
 .cbw-light {
-	background: #4f78d0; 
+	background: #4f78d0;
 }
+
 .cbw-dark {
 	background: #214da5;
 }
@@ -43,9 +43,11 @@
 	outline: 3px solid rgba(124, 169, 255, 0.85);
 	outline-offset: -3px;
 }
+
 .cbw-square.cbw-legal {
 	box-shadow: inset 0 0 0 3px rgba(52, 211, 153, 0.55);
 }
+
 .cbw-square.cbw-last {
 	box-shadow: inset 0 0 0 3px rgba(56, 189, 248, 0.55);
 }
